fixed overflowing fonts

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@ body{
    grid-template-rows: repeat(9,100px);
    grid-gap: 10px;
    margin: .5%;
+   font-size: calc(16px + 0.390625vw);
 }
 
 header{
@@ -123,9 +124,9 @@ main{
 }
 .card{
    border: 2.5px solid #28847c;
-   margin: 5% auto;
+   margin: 15% auto;
    width: 80%;
-   height: 90%;
+   height: 80%;
    border-radius: 15px;
 }
 .cards1{
@@ -152,7 +153,21 @@ main{
      background-repeat: no-repeat;
      background-position:inherit;
    }
+   25%{
+     width: 95%;
+     background-color: rgba(0, 0, 0, 0.5);
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: inherit;
+   }
    50%{
+     width: 95%;
+     background-image: url(../assets/neslihan-gunaydin-BduDcrySLKM-unsplash.jpg);
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position:inherit;
+   }
+   75%{
      width: 95%;
      background-color: rgba(0, 0, 0, 0.5);
      background-size: cover;
@@ -186,10 +201,10 @@ article .img-window{
    width: 95%;
    height: 50%;
    animation-name: animated-bg;
-   animation-duration: 10s;
+   animation-duration: 20s;
    animation-delay: 2s;
    animation-iteration-count: infinite;
-   animation-direction: alternate;
+   animation-direction:normal;
    animation-timing-function: ease-in-out ;
 }
 
@@ -228,15 +243,17 @@ article .text-window{
    align-items: center;
 }
 article .text-window h1{
+   margin-top: 1%;
    text-transform: uppercase;
    font-weight: bold;
    color:#28847c;
    border-bottom: 1px solid #28847c;
-
+   font-size: 1.2rem;
+   text-align: center;
 }
 article .text-window p{
-   
-   margin: 2% auto;
+   font-size: 1rem;
+   margin: .5% auto;
    width: 95%;
    height: 78%;
    text-align: center;
@@ -248,7 +265,7 @@ article .text-window button{
    color: white;
    background-color: #28847c;
    width: 96%;
-   height: 20%;
+   height: 20px;
    margin-bottom: 2%;
 }
 footer{
